add notices controllers
